#=====================================================
# mdecode
# Lilith M-Code Disassembler
#
# Guido Hoss, 14.03.2022
#
# Published by Guido Hoss under GNU Public License V3.
#=====================================================

#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([m2decode], [0.3], [])
AM_INIT_AUTOMAKE([-Werror foreign subdir-objects])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([
	src/Makefile
	Makefile
])

AC_OUTPUT
